--- a/memory-game.html
+++ b/memory-game.html
@@ -7,6 +7,7 @@
     <title>Memory Game</title>
   </head>
   <body>
+    <div id="grid-container"></div>
     <script src="memory-game.js"></script>
   </body>
 </html>
