--- a/memory-game.html
+++ b/memory-game.html
@@ -7,7 +7,12 @@
     <title>Memory Game</title>
   </head>
   <body>
+    <header>
+      <button id="animals-btn">Animals</button>
+      <button id="weather-btn">Weather</button>
+    </header>
     <div id="grid-container"></div>
+
     <script src="memory-game.js"></script>
   </body>
 </html>
