Provide a  drop down menu to choose a category

--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
   </head>
   <body>
     <header>
-      <button id="animals-btn">Animals</button>
-      <button id="weather-btn">Weather</button>
+      <label for="category"
+        >Choose a category
+        <select id="category" name="category-list">
+          <option value="animals">Animals</option>
+          <option value="weather">Weather</option>
+        </select>
+      </label>
     </header>
     <div id="grid-container"></div>
 
