Add countDown timer

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
           <option value="weather">Weather</option>
         </select>
       </label>
+      <p id="timer">Timer</p>
     </header>
     <div id="grid-container"></div>
 
