Start/Restart game overlays

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <p>Count Down: <span id="timer">100</span>s</p>
+      <p>Count Down: <span id="timer">15</span>s</p>
       <p>Number of moves: <span id="counter">0</span></p>
     </header>
     <div class="overlay-text visible">
@@ -24,7 +24,7 @@
     </div>
     <div id="game-over" class="overlay-text">
       Game over!
-      <span class="play">Restart</span>
+      <button id="restart-game">Restart</button>
     </div>
     <div id="success" class="overlay-text">
       Woo-hoo! All cards are matched!
