add another option for a category

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <select id="category" name="category-list">
           <option value="animals">Animals</option>
           <option value="weather">Weather</option>
+          <option value="clothes">Clothes</option>
         </select>
       </label>
       <button id="start-game" class="play">Start the Game</button>
