Adjust header styles, needs more work

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
       <div id="timer-container">
         <div id="timer-animate"></div>
       </div>
-      <p>Number of moves: <span id="counter">0</span></p>
+      <div id="moves-container">
+        <p class="moves">Number of moves: <span id="counter">0</span></p>
+      </div>
     </header>
     <div class="overlay-text visible">
       <h2 class="title">Memory Game</h2>
