Add a form for the user to submit a category

--- a/index.html
+++ b/index.html
@@ -72,5 +72,18 @@
     <div id="grid-container" class="disabled"></div>
     <script src="timer.js"></script>
     <script type="module" src="memory-game.js"></script>
+    <footer id="game-footer">
+      <form action="" id="user-form">
+        <label for="user-category"
+          >Suggest a category
+          <input
+            id="user-category"
+            type="text"
+            placeholder="Suggest a category"
+          />
+        </label>
+        <button type="submit" class="btn-submit">Submit</button>
+      </form>
+    </footer>
   </body>
 </html>
