Some minor changes

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <option value="weather">Weather</option>
           <option value="clothes">Clothes</option>
         </select>
-        <label for="user-timer"> Set a time limit: </label>
+        <label for="user-timer"> Set a time limit in seconds: </label>
         <input
           id="user-timer"
           type="number"
@@ -53,6 +53,7 @@
         <p id="feedback"></p>
         <p id="instructions">
           Match each image with its corresponding word before time runs out.
+          <br />
           Good luck!
         </p>
       </form>
