Add an option for Ukraine and add flags images

--- a/index.html
+++ b/index.html
@@ -25,15 +25,29 @@
         <form id="user-settings">
           <div class="radio-group">
             <label>
-              <input
-                type="radio"
-                name="language"
-                value="english"
-                checked
-              />English
+              <input type="radio" name="language" value="english" checked />
+              English
+              <img
+                src="./assets/Flag_of_United_States.png"
+                alt="United States flag"
+                class="flag"
+              />
             </label>
             <label>
               <input type="radio" name="language" value="danish" />Danish
+              <img
+                src="./assets/Flag_of_Denmark.png"
+                alt="Danish flag"
+                class="flag"
+              />
+            </label>
+            <label>
+              <input type="radio" name="language" value="ukrainian" />Ukrainian
+              <img
+                src="./assets/Flag_of_Ukraine.png"
+                alt="Ukrainian flag"
+                class="flag"
+              />
             </label>
           </div>
           <label for="category"> Choose a category</label>
