Add span tags to access items that  dynamically change

--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
         <button id="start-game">Start the Game</button>
       </div>
       <div id="game-over" class="overlay-text">
-        Game over!
+        <span class="game-over-text">Game over!</span>
         <button id="restart-game">Restart</button>
       </div>
       <div id="success" class="overlay-text">
-        Woo-hoo! All cards are matched!
+        <span class="success-text">Woo-hoo! All cards are matched!</span>
         <button id="play-again">Play again</button>
       </div>
       <div id="grid-container" class="disabled"></div>
@@ -123,8 +123,8 @@
         <p>&copy; 2024 Memory Game | Designed by Tanya Dewland</p>
       </div>
     </footer>
-    <script src="timer.js"></script>
-    <script type="module" src="memory-game.js"></script>
+    <script type="module" src="timer.js"></script>
     <script type="module" src="translations.js"></script>
+    <script type="module" src="memory-game.js"></script>
   </body>
 </html>
